Fixed an issue with poor visibility in the Light Theme. [WIP] Add Mastodon-light 2024 theme.

--- a/app/javascript/styles/mastodon-light2024/diff.scss
+++ b/app/javascript/styles/mastodon-light2024/diff.scss
@@ -1,11 +1,6 @@
 // Notes!
 // Sass color functions, "darken" and "lighten" are automatically replaced.
 
-// basics.scss
-body {
-  background: var(--background-color);
-}
-
 html {
   scrollbar-color: $ui-base-color rgba($ui-base-color, 0.25);
 }
@@ -26,25 +21,6 @@ html {
 }
 
 // Change default background colors of columns
-.column > .scrollable,
-.getting-started,
-.column-inline-form,
-.regeneration-indicator {
-  background: $white;
-  border: 1px solid lighten($ui-base-color, 8%);
-  border-top: 0;
-}
-
-.error-column {
-  border: 1px solid lighten($ui-base-color, 8%);
-}
-
-.column > .scrollable.about {
-  border-top: 1px solid lighten($ui-base-color, 8%);
-}
-
-.about__meta,
-.about__section__title,
 .interaction-modal {
   background: $white;
   border: 1px solid lighten($ui-base-color, 8%);
@@ -58,24 +34,6 @@ html {
   background: lighten($ui-base-color, 12%);
 }
 
-.filter-form {
-  background: $white;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
-}
-
-.column-back-button,
-.column-header {
-  background: $white;
-  border: 1px solid lighten($ui-base-color, 8%);
-
-  @media screen and (max-width: $no-gap-breakpoint) {
-    border-top: 0;
-  }
-}
-
-.column-header__back-button,
-.column-header__button,
-.column-header__button.active,
 .account__header {
   background: $white;
 }
@@ -112,24 +70,6 @@ html {
   }
 }
 
-.column-subheading {
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
-}
-
-.getting-started,
-.scrollable {
-  .column-link {
-    background: $white;
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
-
-    &:hover,
-    &:active,
-    &:focus {
-      background: $ui-base-color;
-    }
-  }
-}
-
 .getting-started .navigation-bar {
   border-top: 1px solid lighten($ui-base-color, 8%);
   border-bottom: 1px solid lighten($ui-base-color, 8%);
@@ -137,16 +77,6 @@ html {
   @media screen and (max-width: $no-gap-breakpoint) {
     border-top: 0;
   }
-}
-
-.drawer__header,
-.drawer__inner {
-  background: $white;
-  border: 1px solid lighten($ui-base-color, 8%);
-}
-
-.drawer__inner__mastodon {
-  background: $white;
 }
 
 .search__input,
@@ -179,11 +109,6 @@ html {
 // Change the background colors of statuses
 .focusable:focus {
   background: lighten($white, 4%);
-}
-
-.detailed-status,
-.detailed-status__action-bar {
-  background: $white;
 }
 
 // Change the background colors of status__content__spoiler-link
@@ -550,42 +475,14 @@ html {
   color: $white;
 }
 
-.privacy-dropdown__option,
-.language-dropdown__dropdown__results__item {
-  &:hover,
-  &:active {
-    background: $ui-base-color;
-  }
-}
-
 .compose-form .spoiler-input__input {
   color: lighten($ui-highlight-color, 8%);
 }
 
+.compose-form .autosuggest-textarea__textarea,
 .compose-form__highlightable,
 .poll__option input[type='text'] {
   background: darken($ui-base-color, 10%);
-}
-
-.compose-form .autosuggest-textarea__textarea {
-  background: darken($ui-base-color, 8%);
-}
-
-.compose-form {
-  &__highlightable {
-    border: 1px solid lighten($ui-base-color, 8%);
-
-    .spoiler-input {
-      .autosuggest-input {
-        border-bottom: 1px solid lighten($ui-base-color, 8%);
-        border-top: 1px solid lighten($ui-base-color, 8%);
-      }
-    }
-
-    .autosuggest-textarea__textarea {
-      background: $white;
-    }
-  }
 }
 
 .inline-follow-suggestions {
@@ -599,15 +496,4 @@ html {
 
 .inline-follow-suggestions__body__scroll-button__icon {
   color: $white;
-}
-
-// emoji_picker.scss
-.emoji-mart-bar {
-  &:first-child {
-    background: darken($ui-base-color, 10%);
-  }
-}
-
-.emoji-mart-search input {
-  background: $ui-base-color;
 }
